--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "passwordencryption",
   "version": "1.0.0",
-  "description": "password encryption",
+  "description": "Password Encryption",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,7 +9,7 @@
   "keywords": [
     "password"
   ],
-  "author": "surendra",
+  "author": "Surendra Babu",
   "license": "ISC",
   "dependencies": {
     "crypto-js": "^3.1.9-1"
